testet all endpoints and fixes the +responce on user and game update +some fixes in swagger annotations (missing params)
error in game post notfound yet
